--- a/app/src/main/res/layout/container_coctail.xml
+++ b/app/src/main/res/layout/container_coctail.xml
@@ -47,6 +47,6 @@
         android:layout_marginLeft="5dp"
         android:text="Glass"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:textColor="@color/colorGrey" />
+        android:textColor="@color/colorLightPink" />
 
 </RelativeLayout>
