added coctail ingredients

--- a/app/src/main/res/layout/container_coctail.xml
+++ b/app/src/main/res/layout/container_coctail.xml
@@ -21,7 +21,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_marginLeft="5dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="25dp"
         android:layout_marginRight="5dp"
         android:text="Tags"
         android:textAppearance="?android:attr/textAppearanceSmall"
@@ -33,7 +33,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_marginLeft="5dp"
-        android:layout_marginTop="23dp"
+        android:layout_marginTop="45dp"
         android:layout_marginRight="5dp"
         android:text="Category"
         android:textAppearance="?android:attr/textAppearanceSmall"
@@ -46,6 +46,34 @@
         android:layout_below="@id/drinkName"
         android:layout_marginLeft="5dp"
         android:text="Glass"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:textColor="@color/colorLightPink" />
+
+    <TextView
+        android:id="@+id/drinkIngredient1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/drinkGlass"
+        android:layout_marginLeft="10dp"
+        android:text="Ingriedient"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:textColor="@color/colorLightPink" />
+    <TextView
+        android:id="@+id/drinkIngredient2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/drinkIngredient1"
+        android:layout_marginLeft="10dp"
+        android:text="Ingriedient"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:textColor="@color/colorLightPink" />
+    <TextView
+        android:id="@+id/drinkIngredient3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/drinkIngredient2"
+        android:layout_marginLeft="10dp"
+        android:text="Ingriedient"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:textColor="@color/colorLightPink" />
 
