--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,6 @@
     <color name="colorYellow">#fff</color>
 
     <color name="colorLightPink">#F3EBAB</color>
-    <color name="colorWhite">#F8F5F5</color>
+    <color name="colorWhite">#FBF5F5</color>
     <color name="colorGrey">#57595A</color>
 </resources>
